deleted unused files - rename files to make more sense - adding feature of selecting players from list to lineup

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <link rel="shortcut icon" href="assets/game.png" type="image/x-icon">
     <title>Build Team</title>
@@ -15,50 +15,38 @@
         <div class="stad-players">
             <img class="pitch-image" src="./assets/thestadium.png" alt="" />
             <div class="players-container" id="players-container">
-                <div id="player1">
-                    <a href="">
-                        <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-                    </a>
-                </div>
-                <div id="player2">
+                <div id="player1" class="position-slot">
                     <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
                 </div>
-                <div id="player3">
+                <div id="player2" class="position-slot">
                     <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
                 </div>
-                <div id="player4">
+                <div id="player3" class="position-slot">
                     <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
                 </div>
-                <div id="player5">
+                <div id="player4" class="position-slot">
                     <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
                 </div>
-                <div id="player6">
+                <div id="player5" class="position-slot">
                     <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
                 </div>
-                <div id="player7">
+                <div id="player6" class="position-slot">
                     <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
                 </div>
-                <div id="player8">
+                <div id="player7" class="position-slot">
                     <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
                 </div>
-                <div id="player9">
+                <div id="player8" class="position-slot">
                     <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
                 </div>
-                <div id="player10">
+                <div id="player9" class="position-slot">
                     <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
                 </div>
-                <div id="player11">
+                <div id="player10" class="position-slot">
                     <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
-
+                </div>
+                <div id="player11" class="position-slot">
+                    <img class="playerCard" src="./assets/black-card-removebg-preview.png" alt="" />
                 </div>
             </div>
 
@@ -98,174 +86,6 @@
         <div class="players-main">
             <div class="players-all" id="players-all">
                 <!-- ============  add player here ============ -->
-            </div>
-
-
-            <div class="modal-container" id="modal-container">
-                <div class="modal">
-                    <h1>Add a player here</h1>
-                    <form id="form" class="form">
-                        <div class="one-line">
-                            <div class="one-input-box">
-                                <label for="name">Player Name</label>
-                                <div class="one-input">
-                                    <input type="text" id="name" placeholder="e.g Lionel Messi">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                            <div class="one-input-box">
-                                <label for="photo">Image URL</label>
-                                <div class="one-input">
-                                    <input type="text" id="photo"
-                                        placeholder="https://cdn.sofifa.net/players/158/023/25_120.png">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                            <div class="one-input-box">
-                                <label for="name">Position</label>
-                                <div class="one-input">
-
-                                    <select name="positions" id="position">
-                                        <option disabled selected value="">Select a position</option>
-                                        <option value="GK">GK</option>
-                                        <option value="RB">RB</option>
-                                        <option value="CB">CB</option>
-                                        <option value="CDM">CDM</option>
-                                        <option value="CM">CM</option>
-                                        <option value="CAM">CAM</option>
-                                        <option value="RM">RM</option>
-                                        <option value="LM">LM</option>
-                                        <option value="RW">RW</option>
-                                        <option value="LW">LW</option>
-                                        <option value="CF">CF</option>
-                                        <option value="ST">ST</option>
-                                    </select>
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="one-line">
-                            <div class="one-input-box">
-                                <label for="nationality">Nationality</label>
-                                <div class="one-input">
-                                    <input type="text" id="nationality" placeholder="e.g Argentina">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                            <div class="one-input-box">
-                                <label for="flag">Country flag</label>
-                                <div class="one-input">
-                                    <input type="text" id="flag"
-                                        placeholder="e.g https://cdn.sofifa.net/players/158/023/25_120.png">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                            <div class="one-input-box">
-                                <label for="club">Club</label>
-                                <div class="one-input">
-                                    <input type="text" id="club" placeholder="e.g Inter Miami">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="one-line">
-                            <div class="one-input-box">
-                                <label for="logo">Club logo</label>
-                                <div class="one-input">
-                                    <input type="text" id="logo"
-                                        placeholder="e.g https://cdn.sofifa.net/players/158/023/25_120.png">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                            <div class="one-input-box">
-                                <label for="rating">Rating</label>
-                                <div class="one-input">
-                                    <input type="number" id="rating" placeholder="e.g 95">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="one-line">
-                            <div class="one-input-box">
-                                <label for="pace">Pace</label>
-                                <div class="one-input">
-                                    <input type="number" id="pace" placeholder="e.g 99">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                            <div class="one-input-box">
-                                <label for="shooting">Shooting</label>
-                                <div class="one-input">
-                                    <input type="number" id="shooting" placeholder="e.g 99">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                            <div class="one-input-box">
-                                <label for="passing">Passing</label>
-                                <div class="one-input">
-                                    <input type="number" id="passing" placeholder="e.g 99">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="one-line">
-                            <div class="one-input-box">
-                                <label for="dribbling">Dribbling</label>
-                                <div class="one-input">
-                                    <input type="number" id="dribbling" placeholder="e.g 99">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                            <div class="one-input-box">
-                                <label for="defending">Defending</label>
-                                <div class="one-input">
-                                    <input type="number" id="defending" placeholder="e.g 99">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                            <div class="one-input-box">
-                                <label for="physical">Physical</label>
-                                <div class="one-input">
-                                    <input type="number" id="physical" placeholder="e.g 99">
-                                    <i class="fa-solid fa-circle-check"></i>
-                                    <i class="fa-solid fa-exclamation"></i>
-                                    <small>Error message</small>
-                                </div>
-                            </div>
-                        </div>
-                    </form>
-                    <div class="buttons">
-                        <button class="main-button" id="submit-button" type="submit">Submit</button>
-                        <button class="secondary-button" id="close">Close</button>
-                    </div>
-                </div>
             </div>
         </div>
     </main>
