--- a/players.html
+++ b/players.html
@@ -7,7 +7,7 @@
     <title>Players</title>
     <link rel="shortcut icon" href="assets/game.png" type="image/x-icon">
     <link rel="stylesheet" href=" https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./players.css">
 </head>
 
 <body>
@@ -193,7 +193,7 @@
             </div>
         </div>
     </main>
-    <script src="script.js"></script>
+    <script src="./players.js"></script>
 </body>
 
 </html>
